Resolves tdf#127756 - Tip of the day not localized

Introduced %LANGUAGENAME token being replaced with
BCP47 for pt, en, zh or ISO otherwise

Change-Id: Iaa7168731e0f6a8e0dd1e906ff0ef646534d9f4b